# docker-flask-celery-rabitmq

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
api/: app.py
celery_queue/: tasks.py
